--- a/_posts/2024-08-01-lab_opens.md
+++ b/_posts/2024-08-01-lab_opens.md
@@ -1,6 +1,6 @@
 ---
 title: Laboratory opens
-image: images/share.png
+image: images/open.png
 ---
 
 The Laboratory of Oral Mucosal Immunity opens its doors in September 2024 - and we're hiring! Check out the Teams page to see hiring announcements. 
