--- a/_posts/2024-09-03-lab_opens.md
+++ b/_posts/2024-09-03-lab_opens.md
@@ -2,6 +2,7 @@
 title: Laboratory opens
 category: news
 image: images/open.png
+last_modified_at: ""
 ---
 
 The Laboratory of Oral Mucosal Immunity opens its doors in September 2024 - and we're hiring! Check out the Teams page to see hiring announcements. 
